Version 2.0 [STABLE] has been released (on SpigotMC and BuiltByBit) and successfully tested on Minecraft versions 1.10 to 1.20.
However, I have temporarily disabled the event-triggered announcements feature due to some minor bugs that occurred when an event triggered an action bar announcement while the /abx announce command was being used. Although I made sure that all announce tasks were cancelled when a new one was called, I am not entirely sure what caused the issue. I will fix it and roll out the feature in upcoming stable releases.

I will recommit the original unstable version 2.0 (with the event-triggered announcements) as version 2.1 unstable. I hope to fix the issue soon.