@@ -1,12 +1,13 @@
 package com.me.actionbarxtreme.utils;
 
-import org.bukkit.Bukkit;
+// import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
-import org.bukkit.entity.Player;
+// import org.bukkit.entity.Player;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class tabComplete implements TabCompleter {
@@ -14,16 +15,20 @@ public class tabComplete implements TabCompleter {
 
     @Override
     public List<String> onTabComplete(CommandSender commandSender, Command command, String s, String[] strings) {
+        List<String> tabCompletions = new ArrayList<>();
 
         if (strings.length == 1) {
-            return List.of("reload", "announce", "forceeventannounce");
+            tabCompletions.addAll(Arrays.asList("reload", "announce"/*"forceeventannounce"*/));
+            return tabCompletions;
         } else if (strings[0].equalsIgnoreCase("announce") || strings[0].equalsIgnoreCase("broadcast") || strings[0].equalsIgnoreCase("bc")) {
             if (strings.length == 2) {
-                return List.of("3s", "4s", "5s", "6s", "7s", "8s", "9s", "10s");
+                tabCompletions.addAll(Arrays.asList("3s", "4s", "5s", "6s", "7s", "8s", "9s", "10s"));
+                return tabCompletions;
             }
-        } else if (strings[0].equalsIgnoreCase("forceeventannounce")) {
+        }
+        /*else if (strings[0].equalsIgnoreCase("forceeventannounce")) {
             if (strings.length == 2) {
-                return List.of("onplayerban", "ondragonrespawn", "ondragondeath", "onwitherdeath", "onplayerkick", "onelderguardiandeath", "onwardendeath", "onplayerkilledplayer");
+                return List.of("onplayerban", "ondragondeath", "onwitherdeath", "onplayerkick", "onelderguardiandeath", "onwardendeath", "onplayerkilledplayer");
             }
         } else if (strings[0].equalsIgnoreCase("forceeventannounce") && strings[1].equalsIgnoreCase("onplayerkilledplayer")) {
             if (strings.length == 3) {
@@ -32,9 +37,10 @@ public class tabComplete implements TabCompleter {
                 return getOnlinePlayerNames();
             }
         }
+        */
         return null;
     }
-
+/*
     private List<String> getOnlinePlayerNames() {
         List<String> playerNames = new ArrayList<>();
         for (Player player : Bukkit.getOnlinePlayers()) {
@@ -42,4 +48,5 @@ public class tabComplete implements TabCompleter {
         }
         return playerNames;
     }
+     */
 }
